# openapi-deref

./: Cargo.toml  README.md
oai_examples/: petstore-expanded.json
src/: lib.rs  three_one.rs  three_zero.rs
