[package]
name = "openapi-flatten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
jsonpath-rust = "0.3.2"
indexmap = {version = "1.0", features = ["serde-1"]}
serde = "1.0.188"
serde_json = "1.0.107"
snafu = "0.7.5"
json-patch = "1.1.0"

[dependencies.openapiv3]
git = "ssh://git@github.com/krlohnes/openapiv3.git"
rev = "25f9af7e5e10d821d52e88aa580cd225555b1ff5"
